# sap-router-skill

./: ${SAP_BTP_CONNECTIVITY_CREDS_FILE}  .abaplint.json  .env.template  .gitattributes  .gitignore  .healthcheck_cache.json  .mcp.json  .rag_index.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  GEMINI.md  GUIA_IMPLEMENTACAO_V5.md  LICENSE  README.md  SKILL.md  abaplint.json  generated-assets.json  implementation_plan.md  integracao_subagentes_sap.md  package-lock.json  package.json  zrouter_optin.json
bundled/mcps/hochfrequenz-sapgui-mcp/: .env.example  .gitattributes  .gitignore  .gitmodules  .prettierrc  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  domain-specific-terms.txt  nginx-cdp-proxy.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tox.ini
bundled/mcps/hochfrequenz-sapgui-mcp/.github/: dependabot.yml
bundled/mcps/hochfrequenz-sapgui-mcp/.github/workflows/: build_executable.yml  coverage.yml  dev_test.yml  formatting.yml  linting.yml  prettier.yml  python-publish.yml  pythonlint.yml  spell_check.yml  unittests.yml
bundled/mcps/hochfrequenz-sapgui-mcp/docs/: SAP_TEST_PREREQUISITES.md  bulk-operations-performance.md
bundled/mcps/hochfrequenz-sapgui-mcp/docs/design/: sap-quick-report-design.md  sap-quick-report-implementation-plan.md
bundled/mcps/hochfrequenz-sapgui-mcp/docs/plans/: 2024-12-19-utilities-consulting-ai-tools-design.md  2026-01-02-js-extraction-design.md  2026-01-02-pydantic-tool-results-design.md  2026-01-02-sap-fill-form-design.md  2026-01-03-github-feedback-issues-design.md  2026-01-03-intent-logging-design.md  2026-01-04-dropdown-support-design.md  2026-01-04-popup-handling-design.md  2026-01-04-workflow-learning-design.md  2026-01-05-popup-semantics-design.md  2026-01-05-tool-capabilities-discovery-design.md  2026-01-08-se11-lookup-tool-design.md  2026-01-08-se16-data-browser-design.md  2026-01-09-typed-test-helpers-design.md  2026-01-09-typed-test-helpers.md  2026-01-12-fm-class-catalog-design.md  (+40 more)
bundled/mcps/hochfrequenz-sapgui-mcp/scripts/: README.md  add_inline_results.py  consolidate_catalog.py  explore_issue_717.py  probe_dcs_full_enum.py  probe_tree_context_menu.py  recapture-snapshots.ps1  validate_pr_629.py
bundled/mcps/hochfrequenz-sapgui-mcp/unittests/: .pylintrc  __init__.py  conftest.py  se11_debug_ZZZNOTEXIST99.yaml  test_aria_snapshot_type.py  test_backend_manager.py  test_backend_protocol.py  test_breakpoint_list_busy.py  test_breakpoint_models.py  test_breakpoint_tools_confirmation.py  test_catalog.py  test_chrome_finder.py  test_classcatalog.py  test_com_tools_unit.py  test_config.py  test_confirmation_helpers.py  test_contextvar_routing.py  test_credentials_for.py  test_date_helpers.py  test_desktop_backend_reconcile.py  test_desktop_session_registry.py  test_feedback_issue_handler.py  test_feedback_tags.py  test_fmcatalog.py  test_general_purpose_tools.py  test_get_session_status_per_id.py  test_keepalive_session_param.py  test_logging_config.py  test_middleware_models.py  test_models.py  test_pat_validation.py  test_prompts.py  test_quick_report_classifier.py  test_quick_report_models.py  test_quick_report_pipeline.py  test_sap_list_connections.py  test_sap_login_client_override.py  test_server.py  test_session_bind_strict.py  test_session_registry.py  (+6 more)
bundled/mcps/kts982-mcp-sap-gui/: .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
bundled/mcps/kts982-mcp-sap-gui/docs/: CLIENTS.md  OVERVIEW.md  TOOLS.md
bundled/mcps/kts982-mcp-sap-gui/examples/: basic_usage.py
bundled/mcps/kts982-mcp-sap-gui/scripts/: check_docs.py
bundled/mcps/kts982-mcp-sap-gui/tests/: __init__.py  conftest.py  test_code_mode.py  test_sap_controller.py  test_server.py  test_session_manager.py  test_v02_verification_fingerprint.py
bundled/skills/bessermacher-skillian/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  skillian
bundled/skills/bessermacher-skillian/app/: config.py  dependencies.py
bundled/skills/bessermacher-skillian/config/: investigation_sources.yaml  sources.yaml
bundled/skills/bessermacher-skillian/database/: init.sql  seed.sql
bundled/skills/bessermacher-skillian/docs/: agent-architecture.md  prompt-engineering-audit.md
bundled/skills/bessermacher-skillian/scripts/: test.sh
bundled/skills/bessermacher-skillian/tests/: README.md  conftest.py  test_agent.py  test_api.py  test_config.py  test_custom_openai.py  test_data_availability_skill.py  test_data_investigation_skill.py  test_datasphere_connection.py  test_datasphere_integration.py  test_integration.py  test_llm.py  test_ownership_check_skill.py  test_postgres_connector.py  test_rag.py  test_registry.py  test_skill.py  test_tool.py
bundled/skills/bessermacher-skillian/ui/: chat.py
bundled/skills/gixsy95-abap-wiki/: .gitattributes  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llm-profiles.yaml.example  pyproject.toml  slices.yaml
bundled/skills/gixsy95-abap-wiki/.agents/: settings.json
bundled/skills/gixsy95-abap-wiki/.github/: dependabot.yml  pull_request_template.md
bundled/skills/gixsy95-abap-wiki/demo/: README.md
bundled/skills/gixsy95-abap-wiki/raw/: README.md
bundled/skills/gixsy95-abap-wiki/scripts/: bootstrap.ps1  bootstrap.sh  demo.ps1  demo.sh  scan_real_names.py
bundled/skills/gixsy95-abap-wiki/templates/: _section-catalog.yaml  template-badi-impl.md  template-cds-view.md  template-class.md  template-data-element.md  template-domain.md  template-enhancement-impl.md  template-function-group.md  template-function-module.md  template-functional.md  template-include.md  template-interface.md  template-message-class.md  template-process.md  template-program.md  template-structure.md  template-table.md  template-transaction.md  template-view.md
bundled/skills/mariodefelipe-sap-bdc-plugin/mcp-server/: .env.example  pyproject.toml  setup.py
(+5225 files in other folders)
