[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sap-gui"
version = "0.2.2"
description = "MCP Server for SAP GUI Scripting automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcp-sap-gui contributors" }
]
keywords = ["mcp", "sap", "gui", "automation", "scripting", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.4.1,<4",
    "pywin32>=306; platform_system == 'Windows'",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
screenshots = [
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
agent = [
    "claude-agent-sdk>=0.1.0",
]
code-mode = [
    "fastmcp[code-mode]>=3.4.1,<4",
]

[project.scripts]
mcp-sap-gui = "mcp_sap_gui.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sap_gui"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/mcp_sap_gui/prompts.py" = ["E501"]  # prompt text is long-form markdown

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
