[project]
name = "skillian"
version = "0.1.0"
description = "SAP BW AI Assistant with domain-specific skills"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-postgres>=0.0.13",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "langchain-text-splitters>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.0.0",
    "typer[all]>=0.9.0",
    "hdbcli>=2.20.0",
    "jsonpatch>=1.33",
]

[project.scripts]
skillian = "app.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: tests requiring real database connection (deselected by default)",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true